--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,14 @@
     gap: 2rem; /* Space between the nav and socials */
   }
 
+  .left-content{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: space-between;
+    gap: 2rem; /* Space between the nav and socials */
+  }
+
   nav ul {
     display: flex;
     list-style: none;
@@ -118,3 +126,53 @@
     padding: 2rem 0;
   }
   
+/* Burger styles */
+.burger {
+  background: none;
+  border: none;
+  color: white;
+  font-size: 1.5rem;
+  display: none;
+  cursor: pointer;
+}
+
+/* Mobile styles */
+@media (max-width: 768px) {
+  .burger {
+    display: block;
+    background: none;
+    border: none;
+    color: white;
+    font-size: 1.8rem;
+    cursor: pointer;
+  }
+
+  .menu {
+    display: none;
+    flex-direction: column;
+    gap: 1rem;
+    background-color: #050f11;
+    width: 100%;
+    margin-top: 1rem;
+  }
+
+  .menu.show {
+    display: flex;
+  }
+
+  .container {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  nav ul {
+    flex-direction: column;
+    gap: 0.75rem;
+    text-align: center;
+  }
+
+  .socials {
+    margin-top: 0.5rem;
+    justify-content: flex-start;
+  }
+}
